fix: external link icon on cards has bad spacing

--- a/docs/css/extra.css
+++ b/docs/css/extra.css
@@ -7,3 +7,8 @@ footer {
 [data-page-name="index.md"] .wy-nav-content {
   padding-bottom: 0; /* to undo ReadTheDocs theme.css */
 }
+
+/* to improve appearance of external tab icons on cards */
+[class*="card--"] i.fa {
+    margin-block: -1rem 1rem;
+}
